Fixed Frontend Master warnings by wrapping content in a main tag and adding alt text for image

--- a/styles.css
+++ b/styles.css
@@ -1,81 +1,79 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --white: hsl(0, 0%, 100%);
-    --slate-300: hsl(212, 45%, 89%);
-    --slate-500: hsl(216, 15%, 48%);
-    --slate-900: hsl(218, 44%, 22%);
+  --white: hsl(0, 0%, 100%);
+  --slate-300: hsl(212, 45%, 89%);
+  --slate-500: hsl(216, 15%, 48%);
+  --slate-900: hsl(218, 44%, 22%);
 
-    --font-size-title: 20px;
-    --font-size-paragraph: 15px;
+  --font-size-title: 20px;
+  --font-size-paragraph: 15px;
 }
 
 body {
-    background-color: var(--slate-300);
-    font-size: 15px;
-    font-family: 'Outfit';
+  background-color: var(--slate-300);
+  font-size: 15px;
+  font-family: "Outfit";
 
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
 
-    /* This sets the border to be the outermost part of the box (instead of the content)*/
-    box-sizing: border-box;
+  /* This sets the border to be the outermost part of the box (instead of the content)*/
+  box-sizing: border-box;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .card {
-    height: 440px;
-    width: 300px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--white);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 12px;
+  height: 440px;
+  width: 300px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--white);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 12px;
 }
 
 .rounded-image {
-    border-radius: 10px;
-    height: 19rem;
-    width: 19rem;
+  border-radius: 10px;
+  height: 19rem;
+  width: 19rem;
 }
 
-
 .text-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 15rem;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 15rem;
 }
 
 .text-container h3 {
-    color: var(--slate-900);
-    font-size: var(--font-size-title);
-    margin-bottom: 1rem;
+  color: var(--slate-900);
+  font-size: var(--font-size-title);
+  margin-bottom: 1rem;
 }
 
 .text-container p {
-    color: var(--slate-500);
-    font-size: var(--font-size-paragraph);
+  color: var(--slate-500);
+  font-size: var(--font-size-paragraph);
 }
 
 .challenge-description {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
